refactor: code review - cache JWT key, single-parse filter, clean imports, simplify login handler